# geolk

./: .gitignore  .gitmodules  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
docs/: DEVELOPER.md
geodatalk/: manage.py
geodatalk/geo_app/: models.py  permissions.py  serializers.py  tests.py  views.py
geodatalk/geo_app/fixtures/: province_topology.json
geodatalk/geo_app/migrations/: 0001_initial.py  0002_geopolygon_region_id.py  0003_alter_geopolygon_geom.py  0004_topology.py  0005_alter_topology_options_and_more.py
geodatalk/geo_app/schema/: __init__.py  mutations.py  queries.py  scalars.py  schema.py  types.py
geodatalk/geo_app/utils/: topology.py
geodatalk/geodatalk/: asgi.py  settings.py  urls.py  wsgi.py
geodatalk/openapi/: convert_yaml_to_json.py  openapi.json  openapi.yaml
geodatalk/scripts/: dsd_insert_script.sh  ed_insert_script.sh  generate_all_insert_scripts.sh  generate_script.py  gnd_insert_script.sh  insert_data.sh  lg_insert_script.sh  moh_insert_script.sh  pd_insert_script.sh
geovizlk/: .gitignore  package-lock.json  package.json
geovizlk/src/: App.css  App.tsx  index.css  main.tsx
geovizlk/src/components/: AgeDistributionChart.tsx  EthnicityDistributionChart.tsx  GenderDistributionChart.tsx  Home.css  Home.tsx  Info.css  Info.tsx  Map.module.css  Map.tsx  MaritalStatusDistributionChart.tsx  ReligiousAffiliationDistributionChart.tsx  SidePanel.module.css  SidePanel.tsx
geovizlk/src/config/: api.config.ts
geovizlk/src/services/: apiService.ts  dataService.ts  geoService.ts  regionService.ts
(+8 files in other folders)
